# Email-MCP-

./: README.md
backend/: Makefile  README.md  import_dataset.py  pyproject.toml  requirements.txt  setup.py  simple_process.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  email.py  response.py
backend/app/routers/: __init__.py  analytics.py  emails.py
backend/app/services/: __init__.py  ai_service.py  csv_data_service.py  dataset_service.py  email_service.py  extraction_service.py  priority_service.py  sentiment_service.py
backend/app/utils/: __init__.py  email_utils.py  text_processing.py
backend/data/: Support_Emails_Dataset.csv  dashboard_data.json  email_database.db  knowledge_base.json
backend/routes/: analytics.py
frontend/: package-lock.json  package.json  setup-frontend.bat  setup-frontend.sh  tailwind.config.js
frontend/src/: App.css  App.js
frontend/src/components/Charts/: CategoryChart.js  HeatmapChart.js  PriorityChart.js  ResponseTimeChart.js  SentimentChart.js  TimeSeriesChart.js
frontend/src/components/Dashboard/: Analytics.js  Dashboard.css  Dashboard.js  EmailCard.js  EmailExtractedInfo.js  EmailList.js  ResponseEditor.js
frontend/src/components/EmailManagement/: index.js
frontend/src/components/TeamManagement/: index.js
frontend/src/components/common/: Header.js  LoadingSpinner.js  Sidebar.js
frontend/src/hooks/: useEmails.js
frontend/src/services/: api.js
frontend/src/utils/: helpers.js
